--- a/README
+++ b/README
@@ -1,5 +1,21 @@
 SAS Syntax Highlighter for the Wordpress Plugin
-
+-----------------------------------------------------------
 Author: ProcRun
 Web: http://www.procrun.com
 Twitter: ProcRun
+-----------------------------------------------------------
+
+Add SAS Syntax highlighting to a wordpress blog
+
+Test Javascript file:
+
+
+How to load:
+Coming Soon
+
+
+Version: 0.1
+ - Very Very limited function and operator highlighting
+
+
+
